--- a/webapp/css/searchPage.css
+++ b/webapp/css/searchPage.css
@@ -1,13 +1,13 @@
 body{
     font-family: Helvetica, sans-serif;
+    margin: 0px;
 }
 
 /* Banner at top of page contains logo */
 #header-banner   {
     border: 1px solid #ccc;
     background-color: whitesmoke;
-    width: 105%; 
-    margin: -10px;
+    width: 100%; 
 }
 
 /* Logo at the top left corner */
